--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             </ul>
       </div>
     </div>
+    <div class="footer">This project was coded by <a href="https://www.behance.net/Cataploom?locale=en_US&"><strong>Zebra Studio</strong></a> and is <a href="https://github.com/catalinamunevar/zebra-weather-app"><strong> open-source on GitHub</strong></a> and <a href="https://www.netlify.com/"><strong>hosted on Netlity</strong></a></div>
     <script src="src/app.js"></script>
   </body>
 </html>
